# ID

./: .gitignore  CMakeLists.txt  README.md  main.cpp  stb_image.h
ImageDeidentify/: ImageDeidentify.sln  ImageDeidentify.vcxproj
cmake/: dependencies.cmake
